--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +19,55 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row time-block" id="hour9">
+        <div class="col-sm-1 hour">9am</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour10">
+        <div class="col-sm-1 hour">10am</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour11">
+        <div class="col-sm-1 hour">11am</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour12">
+        <div class="col-sm-1 hour">12pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour13">
+        <div class="col-sm-1 hour">1pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour14">
+        <div class="col-sm-1 hour">2pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour15">
+        <div class="col-sm-1 hour">3pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour16">
+        <div class="col-sm-1 hour">4pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
+      <div class="row time-block" id="hour17">
+        <div class="col-sm-1 hour">5pm</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
