--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
     </header>
     <div class="container">
       <div class="row time-block" id="hour9">
-        <div class="col-sm-1 hour">9am</div>
+        <div class="col-sm-1 hour">9AM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour10">
-        <div class="col-sm-1 hour">10am</div>
+        <div class="col-sm-1 hour">10AM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour11">
-        <div class="col-sm-1 hour">11am</div>
+        <div class="col-sm-1 hour">11AM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour12">
-        <div class="col-sm-1 hour">12pm</div>
+        <div class="col-sm-1 hour">12PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour13">
-        <div class="col-sm-1 hour">1pm</div>
+        <div class="col-sm-1 hour">1PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour14">
-        <div class="col-sm-1 hour">2pm</div>
+        <div class="col-sm-1 hour">2PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour15">
-        <div class="col-sm-1 hour">3pm</div>
+        <div class="col-sm-1 hour">3PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour16">
-        <div class="col-sm-1 hour">4pm</div>
+        <div class="col-sm-1 hour">4PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
       <div class="row time-block" id="hour17">
-        <div class="col-sm-1 hour">5pm</div>
+        <div class="col-sm-1 hour">5PM</div>
         <textarea class="col-sm-10 description"></textarea>
         <button type="button" class="col-sm-1 btn saveBtn"><span class="oi oi-circle-check"></span></button>
       </div>
